# alix-neighbourhood-concierge

./: .gitignore  agent.py  data_pipelines.py  g_calendar.py  get_data.py  main.py  model_factory.py  pyproject.toml  read_html.py  read_pdf.py  read_search_results.py  response_generator.py  sample.json  search.py  test_pipeline.py  utils.py
app/: main.py
app/core/: agent.py  get_data.py  read_html.py  read_search_results.py  run_scraping_pipeline.py  search.py
app/db/: database_service.py
app/models/: event.py
app/routes/: events.py
app/utils/: utils.py
chatbot_service/: .dockerignore  Dockerfile  database_service.py  make_table.py  pyproject.toml  query.py  send_query.py  session.py  subscription_service.py
chatbot_service/app/: main.py
chatbot_service/app/core/: send_query.py
chatbot_service/app/db/: database_connection.py  database_service.py
chatbot_service/app/routes/: events.py
chatbot_service/app/schemas/: request_body.py
chatbot_service/scripts/: deploy.sh  start.sh
config/: query_config.py
data/html/: event_detail.html  result_page_content.html
data/json/: sample_output.json  serp_sample_results.json  tavily_sample_results.json  wherecanwego_sample_results.json
info_scraping_service/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  start.sh
info_scraping_service/app/: main.py
info_scraping_service/app/core/: get_data.py  run_scraping_pipeline.py  search.py
info_scraping_service/app/db/: database_service.py
info_scraping_service/app/dependencies/: publisher_service.py
info_scraping_service/app/models/: event.py  session.py
info_scraping_service/app/routes/: events.py
info_scraping_service/app/schemas/: scrape_request.py
info_scraping_service/app/utils/: utils.py
info_scraping_service/scripts/: deploy.sh  start.sh
info_scraping_service/tests/: test_read_html.py  test_search.py
llm_enrichment_service/: .dockerignore  .gitignore  agent.py  agent_config.py  pyproject.toml
llm_enrichment_service/app/: main.py
llm_enrichment_service/app/core/: agent.py  agent_config.py  process_pubsub_message.py  response_generator.py  tavily_search.py  webpage_reader.py
llm_enrichment_service/app/db/: database_service.py
llm_enrichment_service/app/dependencies/: cloud_storage_service.py  pubsub_publisher.py
llm_enrichment_service/app/routes/: recieve_pubsub.py
llm_enrichment_service/app/schemas/: llm_output.py  pubsub_message.py
llm_enrichment_service/scripts/: deploy.sh  start.sh  tunnel.sh
llm_enrichment_service/tests/: conftest.py  test_event_info_extraction_agent.py  test_process_pubsub_message.py
