[tool.poetry]
name = "llm-enrichment-service"
version = "0.1.0"
description = ""
authors = ["daria425 <darianaumova5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^25.1.0"
google-cloud-aiplatform = "^1.79.0"
python-dotenv = "^1.0.1"
google-cloud-pubsub = "^2.28.0"
fastapi = {extras = ["standard"], version = "^0.115.8"}
motor = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
